Complite to write ProfileServiceTest